[tool.poetry]
name = "homebrew-numbers-parser"
# authors = ["Jon Connell <python@figsandfudge.com>"]
# description = "Build numbers-parser Homebrew formula"
# version = "0.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pipdeptree = ">=2.23"
requests = "^2.32.3"
numbers-parser = "^4.14.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
fix = true
line-length = 100
select = ["ALL"]
ignore = [
  "S603",
  "S607",
  "T201",
]
